<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

<!--    进度条-->
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <!--    LOGO栏-->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="110dp"
        android:text="@string/logo"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <!--    搜索栏-->
    <!--    line6：暗示-->
    <EditText
        android:id="@+id/SearchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="505dp"
        android:hint="@string/SearchText"
        android:textSize="20sp"
        tools:layout_marginLeft="20dp"
        tools:layout_marginRight="100dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:inputType="text"
        android:autofillHints="" />

    <!--新闻条-->
    <!--    line4: 拒绝横竖屏切换-->
    <LinearLayout
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchText"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_text1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="30dp">
        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_text2"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_text1"
            tools:layout_editor_absoluteX="0dp">
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


    <!--    天气大字-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/_18"
        android:textSize="40sp"
        android:alpha="0.0"
        android:onClick="fadeInAnimation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />
    <!--    天气栏-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:paddingStart="50dp"
        android:text="@string/textView3"
        android:textSize="15sp"
        android:alpha="0.0"
        android:onClick="fadeInAnimation"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="RtlSymmetry,UsingOnClickInXml,TextSizeCheck" />

    <!--右上角的加号-->
    <ImageView
        android:id="@+id/add_news"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml"
        app:srcCompat="@mipmap/add_picture"
        android:contentDescription="@string/Button1"
        android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
